Just realized nnUNet's dataloaders random crop

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,7 @@ dependencies = [
     "imagecodecs",
     "yacs",
     "batchgeneratorsv2>=0.2",
-    "einops",
-    "albumentations"
+    "einops"
 ]
 
 [project.urls]
